methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:8: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:14: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:24: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:34: error: not found: value dogHouse
		dogHouse();		
                ^